Insert pip explicitly into environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,8 @@ channels:
     - defaults
     - conda-forge
 dependencies:
-    - python = 3.8.6
+    - python = 3.8
+    - pip
     - numpy
     - scipy
     - uncertainties
